--- a/d3d-hook/d3d-hook.vcxproj.filters
+++ b/d3d-hook/d3d-hook.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Timestamp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="HookEvent.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="detours\detours.h">
@@ -78,6 +81,9 @@
       <Filter>源文件</Filter>
     </ClInclude>
     <ClInclude Include="Timestamp.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="HookEvent.h">
       <Filter>源文件</Filter>
     </ClInclude>
   </ItemGroup>
