--- a/win-capture/win-capture.vcxproj.filters
+++ b/win-capture/win-capture.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="inject.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="HookEvent.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inject.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="HookEvent.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
