--- a/d3d-hook/d3d-hook.vcxproj
+++ b/d3d-hook/d3d-hook.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="detours\image.cpp" />
     <ClCompile Include="detours\modules.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="HookEvent.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Timestamp.cpp" />
   </ItemGroup>
@@ -150,6 +151,7 @@
     <ClInclude Include="detours\detours.h" />
     <ClInclude Include="detours\detver.h" />
     <ClInclude Include="dllmain.h" />
+    <ClInclude Include="HookEvent.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Timestamp.h" />
   </ItemGroup>
