--- a/win-capture/win-capture.vcxproj
+++ b/win-capture/win-capture.vcxproj
@@ -130,10 +130,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="HookEvent.cpp" />
     <ClCompile Include="inject.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HookEvent.h" />
     <ClInclude Include="inject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
