--- a/d3d-hook/d3d-hook.vcxproj.filters
+++ b/d3d-hook/d3d-hook.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="HookEvent.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="HookInfo.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="detours\detours.h">
@@ -84,6 +87,9 @@
       <Filter>源文件</Filter>
     </ClInclude>
     <ClInclude Include="HookEvent.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="HookInfo.h">
       <Filter>源文件</Filter>
     </ClInclude>
   </ItemGroup>
