--- a/d3d-hook/d3d-hook.vcxproj
+++ b/d3d-hook/d3d-hook.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="detours\modules.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="HookEvent.cpp" />
+    <ClCompile Include="HookInfo.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Timestamp.cpp" />
   </ItemGroup>
@@ -152,6 +153,7 @@
     <ClInclude Include="detours\detver.h" />
     <ClInclude Include="dllmain.h" />
     <ClInclude Include="HookEvent.h" />
+    <ClInclude Include="HookInfo.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Timestamp.h" />
   </ItemGroup>
